--- a/styles/rtc-peer.css
+++ b/styles/rtc-peer.css
@@ -14,11 +14,9 @@
 }
 
 .connect-form,
-.ortc-status {/*
-	margin-top: 3.2rem;
-	padding-top: 3.2rem;*/
+.ortc-status {
 	border-top: 1px solid #d2d2d2;
-}c
+}
 
 .modal {
     background-color: rgba(0,0,0,.5);
