--- a/styles/rtc-peer.css
+++ b/styles/rtc-peer.css
@@ -120,7 +120,7 @@ label[for="toggleTrickleIce"] {
   display: none;
 }
 #toggle_options_label{
-  position: fixed;
+  position: absolute;
   right: 0px;
   border-radius: 8px 0 0 8px;
   background-color: white;
